# zoglin

./: .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  README.md  TODO.md  index.html  input.zog  main.zog  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: pages.yaml  release.yaml
docs/: faq.md  getting-started.md  index.md
docs/zoglin/: 04-variables.md  05-compile-time.md  functions.md  project-structure.md  resource-locations.md  resources.md  statements.md  variables.md
examples/: commands.zog  config.json5  main.zog  other.zog  setup.zog  test.zog
examples/01-hello-world/: README.md  main.zog
examples/02-fibonacci/: README.md  main.zog
examples/99-config/: README.md
examples/foo/: foo.zog  init.zog
examples/includes/: function.zog  other.zog
faq/: index.html
getting-started/: index.html
search/: search_index.json
src/: compiler.rs  lexer.rs  main.rs  parser.rs
src/compiler/: binary_operation.rs  builtins.rs  expression.rs  file_tree.rs  internals.rs  mod.rs  register.rs  scope.rs  utils.rs
src/config/: mod.rs  serde_impl.rs
src/error/: mod.rs
src/lexer/: commands.rs  mod.rs  registries.rs  token.rs
src/parser/: ast.rs  binary_operation.rs  json.rs  mod.rs  name.rs  resource.rs
std/: main.zog
std/src/: core.zog  math.zog  string.zog  util.zog
stylesheets/: extra.css
test-project/: README.md  main.zog
zoglin/compile-time/: index.html
zoglin/functions/: index.html
zoglin/project-structure/: index.html
zoglin/resource-locations/: index.html
zoglin/resources/: index.html
zoglin/statements/: index.html
(+1 files in other folders)
