[package]
name = "zoglin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
ecow = { version = "0.2.2", features = ["serde"] }
glob = "0.3.1"
json5 = "0.4.1"
regex = "1.10.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
